Fix recs alignment in Search

--- a/client/reader/search-stream/style.scss
+++ b/client/reader/search-stream/style.scss
@@ -121,29 +121,10 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 				max-height: 145px;
 			}
 		}
-
-		.reader-related-card-v2__site-info {
-
-			@media #{$reader-related-card-v2-breakpoint-small} {
-				margin-top: 20px;
-			}
-
-			@media #{$reader-related-card-v2-breakpoint-medium} {
-				margin-top: 20px;
-			}
-		}
 	}
 
 	.reader-related-card-v2__featured-image {
 		margin: 0 0 17px;
-
-		@media #{$reader-related-card-v2-breakpoint-medium} {
-			margin: 0 15px 0 0;
-		}
-
-		@media #{$reader-related-card-v2-breakpoint-small} {
-			margin: 0 15px 0 0;
-		}
 	}
 
 	.reader-related-card-v2__meta {
